--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="#">
             <img src="images/modest-logo.png" alt="Logo">
         </a>
@@ -21,25 +21,25 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">  
             <ul class="navbar-nav nav-pills nav-justified">
                 <li class="nav-item active"> 
-                    <a class="nav-link" href="#">HOME<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">HOME</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">ABOUT<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">ABOUT</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">WORK<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">WORK</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">TEAM<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">TEAM</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">SERVICES<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">SERVICES</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">FEATURES<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">FEATURES</a>
                 </li>
                 <li class="nav-item"> 
-                    <a class="nav-link" href="#">CONTACT<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -65,8 +65,8 @@
             </ol>
         </div>
 
-         <div class=" section1b container">
-            <h3> WELCOME TO OUR MARKETPLACE</h3>
+         <div class=" section1-primary container">
+            <h2> WELCOME TO OUR MARKETPLACE</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor <br> non, ornare sagittis dolor. Nulla vestibulu lacus ...</p>
     
             <div>
@@ -79,24 +79,24 @@
      <div class="section2">
         <h3>WE ARE MODEST</h3>
         <div class="row">
-            <div class=" section2a col-sm-8">
+            <div class=" section2-primary col-sm-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at. </p> <p> sollicitudin ante eros ornare, <strong> sit amet luctus lorem semper</strong>. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
 
                 <div class="socialmedia">
-                    <div style="background: #a4aead url(images/facebook.png) center center no-repeat; background-size: 10px;">
+                    <div style="background-image: url(images/facebook.png); background-size: 10px;">
                     </div>
-                    <div style="background:#a4aead url(images/twitter.png) center center no-repeat; background-size: 15px;">
+                    <div style="background-image: url(images/twitter.png); background-size: 15px;">
                     </div>
-                    <div style="background:#a4aead url(images/googleplus.png) center center no-repeat; background-size: 10px;">
+                    <div style="background-image: url(images/googleplus.png); background-size: 10px;">
                     </div>
-                    <div style="background:#a4aead url(images/dribble.png) center center no-repeat; background-size: 14px;">
+                    <div style="background-image: url(images/dribble.png); background-size: 14px;">
                     </div>
-                    <div class="be" style="background:#a4aead url(images/be.png) center center no-repeat; background-size: 16px;">
+                    <div class="be" style="background-image: url(images/be.png); background-size: 16px;">
                     </div>
                 </div>
             </div>
 
-            <div class="section2b col-sm-4 rectangle-list">
+            <div class="section2-secondary col-sm-4 rectangle-list">
                 <ol>
                 <li> <h6>DEDICATION TO THE CUSTOMERS</h6></li>
                 <p>Integer vel lacus non dui ullamcorper venenatis. Aliquam vitae tristique nisi, vitae ullamcorper risus.</p>
@@ -112,10 +112,45 @@
                 </ol>
             </div>
         </div>
-     </div> 
+    </div> 
+    <hr/>
 
-    <!-- <div class="section3">
-        <h1>MEET THE TEAM</h1>
+     <div class="section3">
+        <h3>MEET THE TEAM</h3>
+        <div class="card-deck">
+            <div class="card"> 
+                <img class="card-img-top" src="images/team1.jpg" alt="Team1">
+                <div class="card-body">
+                <p class="card-title">GLORIA BROMLEY</p>
+                <p class="card-text">CEO and Founder</p>
+                </div>
+            </div>
+            <div class="card"> 
+                <img class="card-img-top" src="images/team2.jpg" alt="Team1">
+                <div class="card-body">
+                <p class="card-title">GLORIA BROMLEY</p>
+                <p class="card-text">CEO and Founder</p>
+                </div>
+            </div>
+            <div class="card"> 
+                <img class="card-img-top" src="images/team3.jpg" alt="Team1">
+                <div class="card-body">
+                <p class="card-title">GLORIA BROMLEY</p>
+                <p class="card-text">CEO and Founder</p>
+                </div>
+            </div>
+            <div class="card"> 
+                <img class="card-img-top" src="images/team4.jpg" alt="Team1">
+                <div class="card-body">
+                <p class="card-title">GLORIA BROMLEY</p>
+                <p class="card-text">CEO and Founder</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr/>
+
+<!-- 
         <div class="team1">
             <img src="images/team1.jpg" alt="Team 1">
             <h4>GLORIA BROMLEY</h4>
@@ -138,8 +173,8 @@
             <img src="images/team4.jpg" alt="Team 4">
             <h4>GLORIA BROMLEY</h4>
             <p>CEO and Founder</p>
-        </div>
-    </div> -->
+        </div> -->
+    </div> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
