--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <a class="navbar-brand" href="#">
             <img src="images/modest-logo.png" alt="Logo">
@@ -44,7 +45,9 @@
             </ul>
         </div>
     </nav> 
+    <!-- /Navigation Bar -->
 
+    <!-- Section 1 -->
     <div class="section1">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false">
             <div class="carousel-inner">
@@ -75,8 +78,10 @@
             </div>
         </div>  
     </div> 
+    <!-- /Section 1 -->
 
-     <div class="section2">
+    <!-- Section 2 -->
+    <div class="section2">
         <h3>WE ARE MODEST</h3>
         <div class="row">
             <div class=" section2-primary col-sm-8">
@@ -114,66 +119,87 @@
         </div>
     </div> 
     <hr/>
+    <!-- /Section 2 -->
 
-     <div class="section3">
+    <!-- Section 3 -->
+    <div class="section3">
         <h3>MEET THE TEAM</h3>
         <div class="card-deck">
             <div class="card"> 
                 <img class="card-img-top" src="images/team1.jpg" alt="Team1">
                 <div class="card-body">
-                <p class="card-title">GLORIA BROMLEY</p>
-                <p class="card-text">CEO and Founder</p>
+                    <p class="card-title">GLORIA BROMLEY</p>
+                    <p class="card-text">CEO and Founder</p>
                 </div>
             </div>
             <div class="card"> 
                 <img class="card-img-top" src="images/team2.jpg" alt="Team1">
                 <div class="card-body">
-                <p class="card-title">GLORIA BROMLEY</p>
-                <p class="card-text">CEO and Founder</p>
+                    <p class="card-title">GLORIA BROMLEY</p>
+                    <p class="card-text">CEO and Founder</p>
                 </div>
             </div>
             <div class="card"> 
                 <img class="card-img-top" src="images/team3.jpg" alt="Team1">
                 <div class="card-body">
-                <p class="card-title">GLORIA BROMLEY</p>
-                <p class="card-text">CEO and Founder</p>
+                    <p class="card-title">GLORIA BROMLEY</p>
+                    <p class="card-text">CEO and Founder</p>
                 </div>
             </div>
             <div class="card"> 
                 <img class="card-img-top" src="images/team4.jpg" alt="Team1">
                 <div class="card-body">
-                <p class="card-title">GLORIA BROMLEY</p>
-                <p class="card-text">CEO and Founder</p>
+                    <p class="card-title">GLORIA BROMLEY</p>
+                    <p class="card-text">CEO and Founder</p>
                 </div>
             </div>
         </div>
     </div>
     <hr/>
+    <!-- /Section 3 -->
 
-<!-- 
-        <div class="team1">
-            <img src="images/team1.jpg" alt="Team 1">
-            <h4>GLORIA BROMLEY</h4>
-            <p>CEO and Founder</p>
+    <!-- Section 4 -->
+    <div class="section4">
+        <h3>LOVELY WORK</h3>
+
+        <div class="row text-center text-lg-left">
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic1.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic2.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic3.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic4.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic5.jpg" alt="">
+                </a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12">
+                <a href="#" class="d-block mb-4 h-100">
+                    <img class="img-fluid" src="images/pic6.jpg" alt="">
+                </a>
+            </div>
         </div>
-
-        <div class="team2">
-            <img src="images/team2.jpg" alt="Team 2">
-            <h4>GLORIA BROMLEY</h4>
-            <p>CEO and Founder</p>
+        <div class="text-center py-5">
+            <button type="button" class="btn btn-outline-light">SHOW ME MORE</button>
         </div>
+    </div>
+    <!-- /Section 4 -->
 
-        <div class="team3">
-            <img src="images/team3.jpg" alt="Team 3">
-            <h4>GLORIA BROMLEY</h4>
-            <p>CEO and Founder</p>
-        </div>
-
-        <div class="team4">
-            <img src="images/team4.jpg" alt="Team 4">
-            <h4>GLORIA BROMLEY</h4>
-            <p>CEO and Founder</p>
-        </div> -->
     </div> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
