--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Template 2</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    
+    <script src="https://use.fontawesome.com/e2cfbeb996.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
@@ -199,6 +199,57 @@
         </div>
     </div>
     <!-- /Section 4 -->
+
+    <!-- Section 5 -->
+    <div class="section5">
+        <h3>WHAT WE DO</h3>
+        <div class="row text-lg-left">
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-cogs fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-pencil fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-tablet fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+        </div>
+
+        <div class="row text-lg-left mb-5">
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-cogs fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-pencil fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-tablet fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 text-center">
+                <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+                <p>EASY THEME SETUP</p>
+                <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+            </div>
+        </div>
+    </div>
+    <!-- /Section 5 -->
 
     </div> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
