--- a/index.html
+++ b/index.html
@@ -251,6 +251,39 @@
     </div>
     <!-- /Section 5 -->
 
+    <!-- Section 6 -->
+    <div class="section6">
+        <h3>FEATURES</h3>
+        <div class="row pb-5">
+            <div class="col-md-4 col-xs-12">
+                <a href="#">
+                    <img class="img-fluid mb-4" src="images/feat1.jpg" alt="">
+                </a>
+                <p>PRODUCT DESIGN: EAMES CHAIRS</p>
+                <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <a href="#">
+                    <img class="img-fluid mb-4" src="images/feat2.jpg" alt="">
+                </a>
+                <p>ELEGANT AND COLORFUL LOGOS</p>
+                <p>I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <a href="#">
+                    <img class="img-fluid mb-4" src="images/feat3.jpg" alt="">
+                </a>
+                <p>A SHOWCASE OF CREATIVE</p>
+                <p>It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
+            </div>
+
+        </div>
+    </div>
+    <!-- /Section 6 -->
+
+    <!-- Section 7 -->
+    <!-- /Section 7 -->
+
     </div> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
