--- a/index.html
+++ b/index.html
@@ -282,9 +282,24 @@
     <!-- /Section 6 -->
 
     <!-- Section 7 -->
+    <div class="section7">
+        <h3>STAY IN TOUCH</h3>
+    </div>
+    <div class="map">
+        <img src="images/map.jpg">
+    </div>
+    <div class=" section7-primary row my-5">
+        <div class="col-md-6">
+        <p><strong>CONTACT INFORMATION</strong></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p> 
+        <p> Cras fermentum elit quis magna congue, <strong> vel sodales</strong> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus </p>
+        </div>
+    </div>
     <!-- /Section 7 -->
+    <footer class="py-4">    
+        <p>© Copyright 2014 by PSD Booster. All Rights Reserved.s</p>
+    </footer>
 
-    </div> 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
