Seccion 3 "Meet the Team" Ready

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div> 
     <!-- /Section 1 -->
 
-    <!-- Section 2 -->
+    <!-- Section 2 Welcome to our Marketplace-->
     <div class="section2">
         <h3>WE ARE MODEST</h3>
         <div class="row">
@@ -119,9 +119,9 @@
         </div>
     </div> 
     <hr/>
-    <!-- /Section 2 -->
+    <!-- /Section 2 We are modest-->
 
-    <!-- Section 3 -->
+    <!-- Section 3  Meet the Team-->
     <div class="section3">
         <h3>MEET THE TEAM</h3>
         <div class="card-deck">
@@ -131,12 +131,33 @@
                     <p class="card-title">GLORIA BROMLEY</p>
                     <p class="card-text">CEO and Founder</p>
                 </div>
+    
+                <div class = "card-hidden">
+                    <div class="socialmedia sm-color">
+                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        </div>
+                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        </div>
+                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="card"> 
                 <img class="card-img-top" src="images/team2.jpg" alt="Team1">
                 <div class="card-body">
                     <p class="card-title">GLORIA BROMLEY</p>
                     <p class="card-text">CEO and Founder</p>
+                </div>
+                <div class = "card-hidden">
+                    <div class="socialmedia sm-color">
+                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        </div>
+                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        </div>
+                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card"> 
@@ -145,12 +166,32 @@
                     <p class="card-title">GLORIA BROMLEY</p>
                     <p class="card-text">CEO and Founder</p>
                 </div>
+                <div class = "card-hidden">
+                    <div class="socialmedia sm-color">
+                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        </div>
+                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        </div>
+                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="card"> 
                 <img class="card-img-top" src="images/team4.jpg" alt="Team1">
                 <div class="card-body">
                     <p class="card-title">GLORIA BROMLEY</p>
                     <p class="card-text">CEO and Founder</p>
+                </div>
+                <div class = "card-hidden">
+                    <div class="socialmedia sm-color">
+                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        </div>
+                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        </div>
+                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
