Section 4 "Lovely Work" Ready!

--- a/index.html
+++ b/index.html
@@ -208,31 +208,81 @@
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic1.jpg" alt="">
                 </a>
+                
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic2.jpg" alt="">
                 </a>
+
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic3.jpg" alt="">
                 </a>
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic4.jpg" alt="">
                 </a>
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic5.jpg" alt="">
                 </a>
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12">
                 <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid" src="images/pic6.jpg" alt="">
                 </a>
+                <div class="hidden-elements">
+                    <div class="plus-icon">
+                        <i class="fa fa-plus fa-2x" aria-hidden="true"></i>
+                    </div>
+                    <div class="description">
+                        <h6>PARTNERSHIP GUIDELINES</h6>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="text-center py-5">
