Section 7 (Secundary) "Form" Ready!

--- a/index.html
+++ b/index.html
@@ -379,11 +379,31 @@
     <div class="map">
         <img src="images/map.jpg">
     </div>
-    <div class=" section7-primary row my-5">
+    <div class=" section7-primary row mt-5">
         <div class="col-md-6">
         <p><strong>CONTACT INFORMATION</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida.</p> 
         <p> Cras fermentum elit quis magna congue, <strong> vel sodales</strong> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus </p>
+        </div>
+
+        <div class="section7-secondary col-md-6">
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <label for="exampleFormControlInput1">YOUR NAME</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1">
+                    </div>
+                    <div class="col">
+                        <label for="exampleFormControlInput2">YOUR EMAIL</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput2">
+                    </div>
+                </div>
+                <div class="form-group mt-4">
+                    <label for="exampleFormControlTextarea1"> YOUR MESSAGE</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">SEND MESSAGE</button>
+            </form>
         </div>
     </div>
     <!-- /Section 7 -->
