--- a/index.html
+++ b/index.html
@@ -407,8 +407,17 @@
         </div>
     </div>
     <!-- /Section 7 -->
-    <footer class="py-4">    
-        <p>© Copyright 2014 by PSD Booster. All Rights Reserved.s</p>
+    <footer class="py-4 row">    
+        <div class="col">
+            <p>© Copyright 2014 by PSD Booster. All Rights Reserved.</p>
+        </div>
+        <div class="col sm-icons">
+            <img src="images/twitter.png" alt="Twitter">
+            <img src="images/facebook.png" alt="Facebook">
+            <img src="images/googleplus.png" alt="Google Plus">
+            <img src="images/dribble.png" alt="Dribble">
+            <img src="images/be.png" alt="Be">
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
