--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at. </p> <p> sollicitudin ante eros ornare, <strong> sit amet luctus lorem semper</strong>. Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
 
                 <div class="socialmedia">
-                    <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                    <div style="background-image: url(images/facebook.png);">
                     </div>
-                    <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                    <div style="background-image: url(images/twitter.png);">
                     </div>
-                    <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                    <div style="background-image: url(images/googleplus.png);">
                     </div>
-                    <div style="background-image: url(images/dribble.png); background-size: 14px;">
+                    <div style="background-image: url(images/dribble.png);">
                     </div>
-                    <div class="be" style="background-image: url(images/be.png); background-size: 16px;">
+                    <div class="be" style="background-image: url(images/be.png);">
                     </div>
                 </div>
             </div>
@@ -121,7 +121,7 @@
     <hr/>
     <!-- /Section 2 We are modest-->
 
-    <!-- Section 3  Meet the Team-->
+    <!-- Section 3  MEET THE TEAM-->
     <div class="section3">
         <h3>MEET THE TEAM</h3>
         <div class="card-deck">
@@ -134,11 +134,11 @@
     
                 <div class = "card-hidden">
                     <div class="socialmedia sm-color">
-                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        <div style="background-image: url(images/facebook.png);">
                         </div>
-                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        <div style="background-image: url(images/twitter.png);">
                         </div>
-                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        <div style="background-image: url(images/googleplus.png);">
                         </div>
                     </div>
                 </div>
@@ -151,11 +151,11 @@
                 </div>
                 <div class = "card-hidden">
                     <div class="socialmedia sm-color">
-                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        <div style="background-image: url(images/facebook.png); ">
                         </div>
-                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        <div style="background-image: url(images/twitter.png);">
                         </div>
-                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        <div style="background-image: url(images/googleplus.png);">
                         </div>
                     </div>
                 </div>
@@ -168,11 +168,11 @@
                 </div>
                 <div class = "card-hidden">
                     <div class="socialmedia sm-color">
-                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        <div style="background-image: url(images/facebook.png);">
                         </div>
-                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        <div style="background-image: url(images/twitter.png);">
                         </div>
-                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        <div style="background-image: url(images/googleplus.png);">
                         </div>
                     </div>
                 </div>
@@ -185,11 +185,11 @@
                 </div>
                 <div class = "card-hidden">
                     <div class="socialmedia sm-color">
-                        <div style="background-image: url(images/facebook.png); background-size: 10px;">
+                        <div style="background-image: url(images/facebook.png);">
                         </div>
-                        <div style="background-image: url(images/twitter.png); background-size: 15px;">
+                        <div style="background-image: url(images/twitter.png);">
                         </div>
-                        <div style="background-image: url(images/googleplus.png); background-size: 10px;">
+                        <div style="background-image: url(images/googleplus.png);">
                         </div>
                     </div>
                 </div>
@@ -197,9 +197,9 @@
         </div>
     </div>
     <hr/>
-    <!-- /Section 3 -->
+    <!-- /Section 3 MEET THE TEAM -->
 
-    <!-- Section 4 -->
+    <!-- Section 4 LOVELY WORK -->
     <div class="section4">
         <h3>LOVELY WORK</h3>
 
@@ -286,7 +286,7 @@
             </div>
         </div>
         <div class="text-center py-5">
-            <button type="button" class="btn btn-outline-light">SHOW ME MORE</button>
+            <button type="button" class="btn btn-outline-primary">SHOW ME MORE</button>
         </div>
     </div>
     <!-- /Section 4 -->
